--- a/online_cv.html
+++ b/online_cv.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Online CV</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My online cv</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles2.css">
+</head>
 
-  <body>
+<body>
     <header>
-      <ul>
-        <li>
-            <a href="#">Personal Details</a>
-        </li>
-        <li>
-            <a href="#">Following Sec</a>
-        </li>
-        <li>
-            <a href="#">Following Sec</a>
-        </li>
-        <li>
-            <a href="#">Following Sec</a>
-        </li>
-      </ul>
+        <h1>CV Of Imraan Meyer </h1>
+
+        <p> Life is too short!</p>
     </header>
 
-    <main>
-      <article class="personal_details">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </article>
-    </main>
 
-  </body>
+
+
+</body>
 </html>
