nav bar created in index updated readme

--- a/online_cv.html
+++ b/online_cv.html
@@ -10,9 +10,28 @@
 
 <body>
     <header>
-        <h1>CV Of Imraan Meyer </h1>
+        <aside class="navbar">
+          <nav>
+            <ul>
+              <li>
+                <a href="#">Home</a>
+                  <a href="#">Personal</a>
+                    <a href="#">Section 3</a>
+                      <a href="#">Section 4</a>
+              </li>
+            </ul>
+          </nav>
+        </aside>
 
-        <p> Life is too short!</p>
+      <div class="header-text">
+        <section>
+            <article class="intro">
+                <h1>CV Of Imraan Meyer </h1>
+                <p> Life is too short!</p>
+            </article>
+        </section>
+      </div>
+
     </header>
 
 
