idea of custom text class(?)

--- a/online_cv.html
+++ b/online_cv.html
@@ -29,7 +29,7 @@
     <div class="container-about">
         <section class="about-me" id="about-me">
 
-              <p>
+              <p id="custom-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
