updated readme  and index file

--- a/online_cv.html
+++ b/online_cv.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-me">About Me</a>
-                    <a href="#">Personal Details</a>
+                    <a href="#about-me-link">About Me</a>
+                    <a href="#personal-details-link">Personal Details</a>
                     <a href="#">Academic Details</a>
                     <a href="#">Work Experience</a>
                 </li>
@@ -26,59 +26,79 @@
         </nav>
     </header>
 
-    <div class="container-about">
-        <section class="about-me" id="about-me">
-
-            <p id="custom-text">
-                I am a hardworking person. I enjoy learning new things, 
-                I tend to welcome challenges in order to learn something new and 
-                improve on myself. 
-            </p>
+    <div class="container-about" id="about-me-link">
+        <section class="about-me" >
+            <div id="custom-text">
+                <h1>About Me</h1>
+                <p >
+                    I am a hardworking person. I enjoy learning new things, 
+                    I tend to welcome challenges in order to learn something new and 
+                    improve on myself. 
+                </p>
+            </div>
             
         </section>
     </div>
 
-    <div class="personal-details">
-        <section id="personal-details">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, deleniti? Cupiditate rem, iure atque, nobis incidunt molestias ratione provident in temporibus, sequi earum? Culpa cum modi nostrum suscipit ipsa deleniti.
-                </p>
+    <div class="container-personal" id="personal-details-link">
+        <section class="personal-details">
+                <div id="custom-text">
+                    
+                        <h1>Personal details</h1>
 
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                </p>
+                        <table>
+                            <thead>
+                                    <th>
+                                        Gender:
+                                    </th>
 
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, deleniti? Cupiditate rem, iure atque, nobis incidunt molestias ratione provident in temporibus, sequi earum? Culpa cum modi nostrum suscipit ipsa deleniti.
-                </p>
+                                    <th>
+                                        Identity Number:
+                                    </th>
 
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                </p>
+                                    <th>
+                                        Cellular Number:
+                                    </th>
 
-                <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                    </p>
+                                    <th>
+                                        E-mail:
+                                    </th>
 
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, deleniti? Cupiditate rem, iure atque, nobis incidunt molestias ratione provident in temporibus, sequi earum? Culpa cum modi nostrum suscipit ipsa deleniti.
-                    </p>
+                                    <th>
+                                        Home Language:
+                                    </th>
 
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                    </p>
+                                    <th>
+                                        Other language Proficiency: 
+                                    </th>
 
-                    <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                        </p>
+                            </thead>
 
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, deleniti? Cupiditate rem, iure atque, nobis incidunt molestias ratione provident in temporibus, sequi earum? Culpa cum modi nostrum suscipit ipsa deleniti.
-                        </p>
+                            <tbody>
+                                    <tr>   
+                                            <td> Male </td>
+                                    </tr>
 
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati animi nemo tempore, in corporis reiciendis rerum? Iure quae voluptas neque quasi facere, in labore pariatur maiores ab cum at esse!
-                        </p>
+                                    <tr>   
+                                            <td> 9709105427081 </td>
+                                    </tr>
+
+                                    <tr>   
+                                            <td> Male </td>
+                                    </tr>
+
+                                    <tr>   
+                                            <td> Male </td>
+                                    </tr>	   	   
+                                <!-- 		:	0785851287 
+                                E-mail address		: 	imraan.meyer97@gmail.com			
+                                Home language		: 	English	
+                                	: 	Afrikaans
+                                Drivers licence		:	Yes -->
+                            </tbody>
+                        </table>
+                </div>
+
     </div>
 
     <footer class="site-footer">
