updated index content

--- a/online_cv.html
+++ b/online_cv.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>
                     <a href="#about-me-link">About Me</a>
-                    <a href="#personal-details-link">Personal Details</a>
+                    <a href="#contact-details-link">Contact Me</a>
                     <a href="#">Academic Details</a>
                     <a href="#">Work Experience</a>
                 </li>
@@ -40,69 +40,28 @@
         </section>
     </div>
 
-    <div class="container-personal" id="personal-details-link">
-        <section class="personal-details">
+    <div class="container-skills">
+        <section class="skills">
                 <div id="custom-text">
                     
-                        <h1>Personal details</h1>
+                        <h1>Skills</h1>
 
-                        <table>
-                            <thead>
-                                    <th>
-                                        Gender:
-                                    </th>
-
-                                    <th>
-                                        Identity Number:
-                                    </th>
-
-                                    <th>
-                                        Cellular Number:
-                                    </th>
-
-                                    <th>
-                                        E-mail:
-                                    </th>
-
-                                    <th>
-                                        Home Language:
-                                    </th>
-
-                                    <th>
-                                        Other language Proficiency: 
-                                    </th>
-
-                            </thead>
-
-                            <tbody>
-                                    <tr>   
-                                            <td> Male </td>
-                                    </tr>
-
-                                    <tr>   
-                                            <td> 9709105427081 </td>
-                                    </tr>
-
-                                    <tr>   
-                                            <td> Male </td>
-                                    </tr>
-
-                                    <tr>   
-                                            <td> Male </td>
-                                    </tr>	   	   
-                                <!-- 		:	0785851287 
-                                E-mail address		: 	imraan.meyer97@gmail.com			
-                                Home language		: 	English	
-                                	: 	Afrikaans
-                                Drivers licence		:	Yes -->
-                            </tbody>
-                        </table>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur amet unde blanditiis quia, officiis minima, porro quidem, provident at ratione velit sint nostrum et debitis ut impedit magni accusantium dolorem?
+                        </p>
                 </div>
 
     </div>
 
-    <footer class="site-footer">
-        <a href="#Instagram" id="instagram"><img src="images/gram.png" alt="" height="40px" width="40px"> </a>
+    <div class>
+
+
+    </div>
+
+    <footer class="site-footer" id="contact-details-link">
+        <a href="#Instagram" id="instagram"><img src="images/icons/gram.png" alt="" height="40px" width="40px"> </a>
         <a href="#Facebook"><img src="" alt=""></a>
         <a href="#Twitter"><img src="" alt=""></a>
         <a href="#LinkedIn"><img src="" alt=""></a>
