updated skills logo, in progress (?)

--- a/online_cv.html
+++ b/online_cv.html
@@ -46,10 +46,22 @@
 
                         <h1>Skills</h1>
 
+                      <div class="html-logo-png">
                         <img src="images/icons/html.png" alt="">
+                      </div>
+
+                      <div class="css-logo-png">
                         <img src="images/icons/css.png"  alt="">
+                      </div>
+
+                      <div class="js-logo-png">
                         <img src="images/icons/js.png" alt="">
+                      </div>
+
+                      <div class="sass-logo-png">
                         <img src="images/icons/sass.png" alt="">
+                      </div>
+
                 </div>
         </section>
     </div>
