--- a/online_cv.html
+++ b/online_cv.html
@@ -78,7 +78,7 @@
             <div id="custom-text">
                 <h2 class="heading-2">Education History</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
                 </p>
             </div>
         </section>
@@ -99,27 +99,28 @@
     </div>
 
     <!-- GO TO TOP BUTTON -->
-    <a class="go-to-top" href="#to-top">
+    <a id="go-to-top" href="#to-top">
         <img src="images/up.png" alt="" height="40px" width="40px">
     </a>
 
     <!-- FOOTER STARTS HERE -->
     <footer class="site-footer" id="contact-details-link">
-        <a href="#Instagram" id="instagram">
-                <img class="footer-imgs" src="images/icons/gram.png" alt="" height="40px" width="40px"> 
-        </a>
+        <ul class="footer-links">
+            <li>
 
-        <a href="#Facebook">
-                <img class="footer-imgs" src="" alt="">
-        </a>
+                <a href="https://www.linkedin.com/in/imraan-meyer-536476175/" target="_blank">
+                        <img class="footer-imgs" src="images/icons/linkedin-logo.png" alt="">
+                </a>
 
-        <a href="#Twitter">
-                <img class="footer-imgs" src="" alt="">
-        </a>
+                <a href="https://github.com/ImraanMeyer" target="_blank">
+                        <img class="footer-imgs" src="images/icons/github.png" alt="">
+                </a>
 
-        <a href="#LinkedIn">
-                <img src="" alt="">
-        </a>
+                <a href="#">
+                        <img src="" alt="">
+                </a>
+            </li>
+        </ul>
     </footer>
 
 
