updated footer content

--- a/online_cv.html
+++ b/online_cv.html
@@ -77,9 +77,15 @@
         <section class="education">
             <div id="custom-text">
                 <h2 class="heading-2">Education History</h2>
+                
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                    Life Choices (CodeSpace) -  <strong>2018</strong> 
                 </p>
+
+                <p>
+                    Islamia College (Matric) - <strong>2015</strong> 
+                </p>
+
             </div>
         </section>
     </div>
@@ -91,9 +97,14 @@
 
                         <h2 class="heading-2">Work Experience</h2>
 
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur amet unde blanditiis quia, officiis minima, porro quidem, provident at ratione velit sint nostrum et debitis ut impedit magni accusantium dolorem?
-                        </p>
+                        <ol>
+                            <li>
+                                <h3>SoundTech</h3>   
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis mollitia impedit amet laudantium totam aspernatur tempore dignissimos, minus, esse veritatis perferendis ratione! Perspiciatis veniam beatae, ipsam aliquid voluptatum non?
+                                </p>    
+                            </li>
+                        </ol>
                 </div>
         </section>
     </div>
@@ -115,12 +126,16 @@
                 <a href="https://github.com/ImraanMeyer" target="_blank">
                         <img class="footer-imgs" src="images/icons/github.png" alt="">
                 </a>
-
-                <a href="#">
-                        <img src="" alt="">
-                </a>
             </li>
         </ul>
+
+        <p>
+            Contact: 0785851287
+        </p>
+
+        <p>
+            Email: imraan.meyer97@gmail.com
+        </p>
     </footer>
 
 
