updated splash screen bg

--- a/online_cv.html
+++ b/online_cv.html
@@ -10,7 +10,7 @@
     <script src="js/main.js" charset="utf-8"></script>
 </head>
 
-<body class="body-parallax">
+<body class="body-parallax" id="to-top">
     <!-- HEADER STARTS HERE -->
     <header id="navbar">
             <nav>
@@ -26,7 +26,7 @@
             </nav>
     </header> 
 
-    <header class="site-header"  id="to-top">
+    <header class="site-header">
         
         <id id="main-heading">
             <h1 class="title">Imraan Meyer</h1>
