updated online cv contnet

--- a/online_cv.html
+++ b/online_cv.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/main.js" charset="utf-8"></script>
+    <!-- <script src="js/shrink-nav.js" charset="utf-8"></script> -->
 </head>
 
 <body class="body-parallax" id="to-top">
@@ -34,7 +35,7 @@
                 Junior Web Developer
             </h2>
         </id>
-
+        
     </header>
 
     <!-- NAV BAR  (navbar)-->
@@ -113,7 +114,33 @@
                                 <li>
                                     <h3>SoundTech</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis mollitia impedit amet laudantium totam aspernatur tempore dignissimos, minus, esse veritatis perferendis ratione! Perspiciatis veniam beatae, ipsam aliquid voluptatum non?
+                                        Working as a salesman and junior technician.
+                                    </p>
+                                    <p>
+                                        At SoundTech I managed to improve my listening skills as well as time managment.
+                                    </p>
+                                    <p>
+                                        Duties:
+                                        <ul>
+                                            <li>
+                                                PC and Mobile repairs.
+                                            </li>
+                                            <li>
+                                                Admin work 
+                                            </li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        Transferable Skills Learnt:
+                                        <ul>
+                                            <li>
+                                                Troubleshooting/Repairing <strong>(Electronics)</strong>
+                                            </li>
+                                            <li>
+                                                Data capturing
+                                            </li>
+                                        </ul>
+                                    
                                     </p>
                                 </li>
                             </ol>
