updated mobile responsive

--- a/online_cv.html
+++ b/online_cv.html
@@ -105,6 +105,7 @@
                             <div class="portfolio-item fourth">
                                     Project 4
                             </div>
+                    </div>
                 </section>
         </div>
 
