--- a/online_cv.html
+++ b/online_cv.html
@@ -90,19 +90,19 @@
                     <div class="portfolio-text">
                         <h2 class="heading-2">Portfolio</h2>
                         
-                            <div class="portfolio-item first">
+                            <div class="portfolio-item">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             </div>
 
-                            <div class="portfolio-item second">
+                            <div class="portfolio-item">
                                 Project 2
                             </div>
 
-                            <div class="portfolio-item third">
+                            <div class="portfolio-item">
                                 Project 3
                             </div>
 
-                            <div class="portfolio-item fourth">
+                            <div class="portfolio-item">
                                     Project 4
                             </div>
                     </div>
