updated mobile responsive navbar about section

--- a/online_cv.html
+++ b/online_cv.html
@@ -145,9 +145,9 @@
                     <div data-aos="fade-up" data-aos-duration="300" data-aos-delay="400">
                             <img class="gifs b" src="images/animat-essential/animat-essential/pencil/animat-pencil-color.gif" alt="">
                     </div>
-                    <div data-aos="fade-up" data-aos-duration="200" data-aos-delay="450">
+                    <!-- <div data-aos="fade-up" data-aos-duration="200" data-aos-delay="450">
                             <img class="gifs c" src="images/animat-essential/animat-essential/line-chart/animat-linechart-color.gif" alt="">
-                    </div>
+                    </div> -->
                     
                     <div class="education-text">
                         <h2 class="heading-2">Education History</h2>
