updated responsive design

--- a/online_cv.html
+++ b/online_cv.html
@@ -193,8 +193,6 @@
                                                 <div data-aos="fade-up" data-aos-duration="100" data-aos-delay="400" class="logo-png">
                                                         <i class="fab fa-js skill-logo"> </i>
                                                 </div>
-    
-    
                                         </div> 
                             </div>
 
@@ -285,10 +283,10 @@
                                                         <h4>Duties:</h4>
                                                         <ul>
                                                             <li>
-                                                                PC and Mobile repairs.
+                                                                <p>PC and Mobile repairs</p>
                                                             </li>
                                                             <li>
-                                                                Admin work 
+                                                                <p>Admin work </p>
                                                             </li>
                                                         </ul>
                                                 </p>
@@ -324,15 +322,15 @@
 
     <!-- FOOTER STARTS HERE -->
     <footer class="site-footer" id="contact-details-link">
-        <ul class="footer-links">
+        <ul class="list-of-links">
             <li>
 
-                <a class="footer-a-tags first" href="https://www.linkedin.com/in/imraan-meyer-536476175/" target="_blank">
-                        <img class="footer-imgs" src="images/icons/linkedin-logo.png" alt="">
+                <a class="footer-a-tags-linkedin" href="https://www.linkedin.com/in/imraan-meyer-536476175/" target="_blank">
+                        <img class="footer-icons" src="images/icons/linkedin-logo.png" alt="">
                 </a>
 
-                <a class="footer-a-tags first" href="https://github.com/ImraanMeyer" target="_blank">
-                        <img class="footer-imgs" src="images/icons/github.png" alt="">
+                <a class="footer-a-tags-github" href="https://github.com/ImraanMeyer" target="_blank">
+                        <img class="footer-icons" src="images/icons/github.png" alt="">
                 </a>
             </li>
         </ul>
