updated responsive design

--- a/online_cv.html
+++ b/online_cv.html
@@ -81,7 +81,7 @@
                                 </div>    
                         </div>
     
-                        <div class="column col-img">
+                        <div class="column col-img bulb">
                             <div data-aos="fade-up" data-aos-duration="300" data-aos-delay="200">
                                 <!-- ANIMATED GIF -->
                                 <img class="gifs a" src="images/animat-essential/lightbulb/animat-lightbulb-color.gif" alt="lightbulb">    
@@ -251,8 +251,7 @@
                                     </div>    
                             </div>
         
-                            <div class="column col-img">
-                                <div data-aos="fade-up" data-aos-duration="300" data-aos-delay="200">
+                            <div class="column col-img pencil">
                                     <!-- ANIMATED GIF -->
                                     <div data-aos="fade-up" data-aos-duration="300" data-aos-delay="400">
                                             <img class="gifs a" src="images/animat-essential/animat-essential/pencil/animat-pencil-color.gif" alt="">
