updated responsive design

--- a/online_cv.html
+++ b/online_cv.html
@@ -219,7 +219,7 @@
 
         <!-- EDCUATION CONTAINER -->
         <div class="container education" id="education-link">
-                <div data-aos="fade-up" data-aos-duration="300">    
+                <div data-aos="zoom-in-left" data-aos-duration="300">    
                     
                     <section class="bubble item-4-edu">
                             <h2 class="heading-2">Education History</h2>
