updated skills section

--- a/online_cv.html
+++ b/online_cv.html
@@ -15,6 +15,7 @@
 
     <script src="js/main.js" charset="utf-8"></script>
     <script src="js/hamburger-menu.js" charset="utf-8"></script>
+    <script src="js/newFile.js"></script>
 
 </head>
 
@@ -27,8 +28,8 @@
                     <nav>
                         <ul>
                             <li id="myLinks">
-                                <a href="#about-me-link">About Me</a>
-                                <a href="#portfolio-link">Portfolio</a>
+                                <a href="#about-me-link" data-target="container about">About Me</a>
+                                <a href="#portfolio-link" data-target="container portfolio">Portfolio</a>
                                 <a href="#skills-link">Skills</a>
                                 <a href="#education-link">Academics</a>
                                 <a href="#work-link">Work Experience</a>
